<resources>
    <string name="app_name">ToDo</string>
    <string name="todo_app">ToDo App</string>
    <string name="language_text">Language</string>
    <string name="mode">Mode</string>
    <string name="settings">Settings</string>
    <string name="done">Done!</string>
    <string name="add_new_task">Add New Task</string>
    <string name="task_title_hint">Task Title</string>
    <string name="task_description_hint">Task Description</string>
    <string name="select_date">Select Date</string>
    <string name="save">Save</string>
    <string name="edit_todo">Edit ToDo</string>
    <string name="edit_task_title">Edit Task</string>
    <string name="task_title_edit_hint">Task Title</string>
    <string name="task_description_edit_hint">Task Description</string>
    <string name="select_date_edit">Select Date</string>
    <string name="save_changes">Save Changes</string>
    <string name="validate_title">Title Is Required</string>
    <string name="validate_describtion">Description Is Required</string>

    <string-array name="lang">
        <item>Language</item>
        <item>System</item>
        <item>English</item>
        <item>Arabic</item>
    </string-array>

    <string-array name="mode">
        <item>Mode</item>
        <item>System</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>

</resources>