<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.todo.ui.viewmodel.Viewmodel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/card"
        android:padding="16dp"
        tools:context=".ui.fragments.addtask.bottomSheetFragment">

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_marginTop="2dp"
            android:background="@color/gray"
            app:layout_constraintCircleRadius="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.2" />


        <TextView
            android:id="@+id/fragemt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/add_new_task"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/task_title_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:error="@{viewModel.validateTitle}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragemt_title"
            android:layout_marginVertical="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/task_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="normal"
                android:text="@={viewModel.todo_title}"
                android:hint="@string/task_title_hint"
                android:textSize="24sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/task_description_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:error="@{viewModel.validateDescription}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_title_container"
            android:layout_marginVertical="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/task_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="normal"
                android:hint="@string/task_description_hint"
                android:text="@={viewModel.todo_description}"
                android:textSize="24sp"
                android:lines="5"
                android:maxLines="5"
                android:minLines="5"
                android:gravity="start" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/datetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_description_container"
            android:layout_marginVertical="12dp" />

        <TextView
            android:id="@+id/task_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewModel.todo_dateFormated}"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/datetext"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_task"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="16dp"
            app:cornerRadius="10dp"
            android:text="@string/save"
            android:backgroundTint="@color/blue"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintTop_toBottomOf="@id/task_date"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>