<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/Fragmentbackground">
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.1"
            android:background="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="24sp"
            android:layout_margin="12dp"
            style="@style/FragmentTitle"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/view"/>

        <TextView
            android:id="@+id/langtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_text"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_margin="32dp"
            app:layout_constraintTop_toBottomOf="@id/view"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Spinner
            android:id="@+id/dropdown_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            style="@style/spinnerbackground"
            android:entries="@array/lang"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/langtext" />


        <TextView
            android:id="@+id/modetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_margin="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dropdown_language" />

        <Spinner
            android:id="@+id/dropdown_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:entries="@array/mode"
            style="@style/spinnerbackground"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/modetext" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>